ingress/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: prometheus.cld.education
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.cld.education
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
